[package]
name = "resotool"
version = "0.3.1"
edition = "2021"
authors = ["Paul Buser <paul@beepyversion.com>"]
license = "GPL-3.0-or-later"
homepage = "https://beepyversion.com"
description = "MIDI controllable resonators"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
fundsp = "0.16.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
